fixed broken style - visibility of elements wre incorrectly set to 'invisible' rather than hidden

--- a/style.less
+++ b/style.less
@@ -13,6 +13,7 @@ main {
 .roundButton {
 	border:0;
 	border-radius:3px;
+	box-shadow: 1px 1px 2px rgba(0,0,0,0.9);
 }
 
 #objectiveType { 
@@ -160,13 +161,13 @@ h1 {
 		background-color:tomato
 	}		
 	#moveForwards {
-		visibility:invisible;
+		visibility:hidden;
 	}
 }
 
 .firstRoom {
 	#moveBackwards {
-		visibility:invisible;
+		visibility:hidden;
 	}
 }
 
